--- a/wot.css
+++ b/wot.css
@@ -7,15 +7,51 @@ a {
     text-decoration-line: none;
 }
 
+/* SECTION-2 */
+.section-2 {
+    border: 1px dotted black; 
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.section-2 > p {
+    border: 1px dotted black; 
+    text-align: center;
+
+    font-family: "Open Sans";
+    line-height: 36px;
+    color: #6a787c;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.section-2 > .icon {
+    border: 1px dotted black; 
+    align-self: center;
+    height: 75px;
+}
+
+.section-2 > h1 {
+    border: 1px dotted black; 
+    align-self: center;
+    font-family: Oswald;
+    font-style: normal;
+}
+
+
 /* SECTION-3 */
 
 .section-3 {
+    border: 1px dotted black; 
     margin: 0 auto;
     display: flex;
     flex-direction: row;
 }
 
 .section-3 > div {
+    border: 1px dotted black; 
     border-right: 1px solid #ccc;
     display: flex;
     align-items: center;
@@ -30,11 +66,13 @@ a {
 }
 
 .section-3 > div > .foot-link {
+    border: 1px dotted black; 
     margin-top: auto;
     padding: 1em;
 }
 
 .section-3 > div > .foot-link > a > span {
+    border: 1px dotted black; 
     background: url('img/sprite_home.png') no-repeat -47px -295px; 
     margin: 1em auto;
     display: block;
@@ -42,23 +80,71 @@ a {
 	height: 24px;
 }
 
-@media (max-width: 1080px) {
+
+/* SECTION-4 */
+.section-4 {
+    border: 1px dotted black; 
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.section-4 > p {
+    border: 1px dotted black; 
+    text-align: center;
+}
+
+.section-4 > h1 {
+    border: 1px dotted black; 
+    align-self: center;
+}
+
+.section-4 > div {
+    border: 1px dotted black; 
+    display: flex;
+    flex-direction: row;
+}
+.section-4 > div > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.section-4 > div > div > div{
+    border: 1px dotted black; 
+    display: flex;
+    flex-direction: column;
+    text-align: center;                                                                           
+}
+
+
+
+/* RESPONSIVE */
+
+@media (max-width: 980px) {
+    .max {
+        width: 720px;
+    }
     .section-3 {
-        width: 540px;
         flex-direction: column;
     }
     .section-3 > div {
         border-right: none;
     }
-}
-
-@media (min-width: 1080px) {
-    .section-3 {
-        width: 1080px;
-        flex-direction: row;
+    .section-4 > div {
+        flex-direction: column;
     }
 }
 
+@media (min-width: 960px) {
+    .min {
+        width: 960px;
+    }
+    .section-3 {
+       
+        flex-direction: row;
+    }
+}
 
 .padding {
     padding: 1em;
@@ -103,12 +189,12 @@ a.hover-gray:hover {
 }
 
 .bulb {
-	background: url('img/sprite_home.png') no-repeat -312px -101px;
+    background: url('img/sprite_home.png') no-repeat -312px -101px;
 	width: 119px;
-    height: 128px;
+	height: 128px;
 }
 
-.arrow-left {
+.arrow-left {       
 	background: url('img/sprite_home.png') no-repeat -47px -295px;
 	width: 24px;
 	height: 24px;
